# LearnVulkanInCLibrary

./: .clang-format  CMakeLists.txt  LearnVulkanInCLibrary.code-workspace
assets/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  NOTE.md  graphics.vert.glsl
src/: main.cpp
src/engine/core/: GameApp.cpp  GameApp.hpp  Time.cpp  Time.hpp
src/engine/render/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/engine/utils/: Math.hpp
